crates/compiler/mir/tests/snapshots/mir_generation_tests__aggregates_struct_literal.snap
---
source: crates/compiler/mir/tests/mir_generation_tests.rs
expression: snapshot_content
---
---
source: crates/compiler/mir/tests/mir_generation_tests.rs
expression: mir_output
---
Fixture: struct_literal.cm
============================================================
Source code:
//!ASSERT CONTAINS: Get address of field 'x'
//!ASSERT CONTAINS: Get address of field 'y'

// Tests the creation of a struct literal.
struct Point {
    x: felt,
    y: felt,
}

fn test() -> felt {
    let p = Point { x: 10, y: 20 };
    return 0;
}

============================================================
Generated MIR:
module {
  // Function 0
  fn test {
    entry: 0

    0:
      // Allocate struct
%0 = stackalloc 2
      // Get address of field 'x'
%1 = getelementptr %0, 0
      store %1, 10
      // Get address of field 'y'
%2 = getelementptr %0, 1
      store %2, 20
      return 0

  }

}
