crates/compiler/mir/tests/snapshots/mir_generation_tests__control_flow_if_both_return.snap
---
source: crates/compiler/mir/tests/mir_generation_tests.rs
expression: snapshot_content
---
---
source: crates/compiler/mir/tests/mir_generation_tests.rs
expression: mir_output
---
Fixture: if_both_return.cm
============================================================
Source code:
//!ASSERT BLOCK_COUNT(test): 3 // entry, then, else. NO merge block.
//!ASSERT NOT_CONTAINS: jump 3 // Should not jump to a merge block.

// Tests an `if-else` where both branches terminate with a `return`.
// No merge block should be generated.
fn test(x: felt) -> felt {
    if (x == 0) {
        return 1;
    } else {
        return 2;
    }
}

============================================================
Generated MIR:
module {
  // Function 0
  fn test {
    parameters: [0]
    entry: 0

    0:
      if %0 then jump 2 else jump 1

    1:
      return 1

    2:
      return 2

  }

}
