crates/compiler/mir/tests/snapshots/mir_generation_tests__control_flow_if_no_else.snap
---
source: crates/compiler/mir/tests/mir_generation_tests.rs
expression: snapshot_content
---
---
source: crates/compiler/mir/tests/mir_generation_tests.rs
expression: mir_output
---
Fixture: if_no_else.cm
============================================================
Source code:
//!ASSERT BLOCK_COUNT(test): 3 // entry, then, merge

// Tests a simple `if` statement without an `else` branch.
// A merge block must be created for the fall-through path.
fn test(x: felt) -> felt {
    let a = 10;
    if (x == 5) {
        a = 20;
    }
    let x = 4;
    return a;
}

============================================================
Generated MIR:
module {
  // Function 0
  fn test {
    parameters: [0]
    entry: 0

    0:
      %1 = stackalloc 1
      store %1, 10
      if %0 Eq 5 then jump 1 else jump 2

    1:
      store %1, 20
      jump 2

    2:
      return %1

  }

}
